README.MD added
-added led matrix demo
-added recorder demo
-added README.MD

--- a/src/core/index.html
+++ b/src/core/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" media="all" href="./css/main.css"/>
 </head>
 <body>
-  <input style="display:none;" id="openDialog" type="file" accept=".glue" multiple/>
+  <input style="display:none;" id="openDialog" type="file" accept=".glue"/>
 </body>
 <!-- <script src="./boot.js"></script> -->
 <script src="./boot.js"></script>
